# 150MRC

./: CMakeLists.txt  README.md  analysis_log.cpp  average_time.txt  average_time1.txt  data_generator.cpp  read_and_calculate.cpp  read_and_calculate1.cpp  readme.md  result.txt  run.sh
history/: 1.cpp  3.cpp  5.cpp  7.cpp
